test/tests/optics/nostructfield.golden

test\tests\optics\nostructfield.hs:50:17: error:
    • get: struct has no field with name "inexistent".
      This struct has the following fields:
      '[ "position" ':-> V 3 Float, "colour" ':-> V 4 Float,
         "size" ':-> Float, "weight" ':-> Float]
    • In a stmt of a 'do' block:
        position <- use @(Name "vertexData" :.: Name "inexistent")
      In the third argument of ‘entryPoint’, namely
        ‘do position <- use @(Name "vertexData" :.: Name "inexistent")
            #gl_Position .= position’
      In a stmt of a 'do' block:
        entryPoint
          @"main"
          @Vertex
          do position <- use @(Name "vertexData" :.: Name "inexistent")
             #gl_Position .= position
   |
50 |     position <- use @( Name "vertexData" :.: Name "inexistent" )
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
